--- a/iframe1.html
+++ b/iframe1.html
@@ -1,5 +1,5 @@
 
-<object data="https://dtvlatam--tst3.custhelp.com/ci/documents/detail/5/15/12/46a3781bc6dfdc82f309c8bc39687b788ca573b1?country=AR&amp;utm_source=CDS&amp;contactType=no-cookie&amp;sitio=%2Fayuda%2Fhome%2Frecargas-y-pagos.html" style="width: -webkit-fill-available;height: -webkit-fill-available;"></object>
+<embed src="https://dtvlatam--tst3.custhelp.com/ci/documents/detail/5/15/12/46a3781bc6dfdc82f309c8bc39687b788ca573b1?country=AR&amp;utm_source=CDS&amp;contactType=no-cookie&amp;sitio=%2Fayuda%2Fhome%2Frecargas-y-pagos.html" style="width: -webkit-fill-available;height: -webkit-fill-available;"></embed>
   
 
   
